Rebuild locale as soon as possible

By calling locale() instead of d->locale we ensure we kill the fake locale and rebuild the good one as soon as possible in the chain. This way we avoid that functions in klocale can end up calling kglobal::locale again that might kill the fake locale and then we end up in trouble because we just killed ourselves ( see backtrace in https://bugs.kde.org/show_bug.cgi?id=274169 )

acked by dfaure

REVIEW: 101509
BUG: 274169
(cherry picked from commit 45bd5256728fdd6ccaa4151acb630c0e69de40bf)